text overflow problem solved

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ h1 {
     gap: 1rem;
     height: fit-content;
     border-radius: 1rem;
+    overflow: hidden;
 }
 .heading {
     font-family: 'Poppins', sans-serif;
@@ -111,6 +112,7 @@ h1 {
     display: flex;
     align-items: center;
     gap: 1rem;
+    width: 95%;
 }
 .round-div-container {
     height: 2rem;
@@ -119,6 +121,7 @@ h1 {
     border-radius: 50%;
     cursor: pointer;
     user-select: none;
+    flex-shrink: 0;
 }
 .pending-round-div-container {
     background-color: #FFE569;
@@ -136,7 +139,10 @@ h1 {
 .text {
     font-size: 1.2rem;
     font-family: 'Poppins', sans-serif;
-    user-select: none;
+    /* user-select: none; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .completed-text {
     text-decoration: line-through;
